--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
     "@vitejs/plugin-vue": "^3.2.0",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
